bot do testow patryka

--- a/pizzeria.html
+++ b/pizzeria.html
@@ -3,22 +3,24 @@
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; font-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ wss://*.qa.engageonechat.com/ wss://*.qa.us-east-1.engageonechat.com/ wss://*.qa.eu-central-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/; font-src 'self' https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.dev.engageonechat.com/ https://*.dev.us-east-1.engageonechat.com/ https://*.dev.eu-west-2.engageonechat.com/ wss://*.dev.engageonechat.com/ wss://*.dev.us-east-1.engageonechat.com/ wss://*.dev.eu-west-2.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
     </head>
     <body>
         <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.qa.engageonechat.com/loader.min.js"></script>
+        <script src="https://webclient.dev.engageonechat.com/loader.min.js"></script>
         <script>converseChatLoader({
-            host: "wss://chatws.qa.eu-central-1.engageonechat.com",
-            converseHost: "https://chatrunner.qa.eu-central-1.engageonechat.com",
-            serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
-            tenant: "saceecb",
-            botId: "Kamil J,bot",
+            host: "wss://chatws.dev.us-east-1.engageonechat.com",
+            converseHost: "https://chatrunner.dev.us-east-1.engageonechat.com",
+            serverUserImage: "https://webclient.qa.engageonechat.com/eo-square-mark.png",
+            tenant: "sa356de",
+            botId: "Kamil 1234 -'Test_athena'!*()_.,1234 -'Test_athena'!*()_.bot",
             placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
+            chatBotBaseUrl: "https://webclient.dev.engageonechat.com"
         });</script>
     </body>
 </html>
+
+
 
 <!DOCTYPE html>
 <html lang="en">
