--- a/pizzeria.html
+++ b/pizzeria.html
@@ -11,14 +11,15 @@
         <script>converseChatLoader({
             host: "wss://chatws.qa.us-east-1.engageonechat.com",
             converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
-            serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
+            serverUserImage: "https://webclient.qa.engageonechat.com/eo-square-mark.png",
             tenant: "sa340c2",
-            botId: "Kamil ID,fajny bot ID",
+            botId: "Kamil ID,Bot ID",
             placeholder: "Type a message...",
             chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
         });</script>
     </body>
 </html>
+
 
 
 
