--- a/pizzeria.html
+++ b/pizzeria.html
@@ -20,7 +20,7 @@
     </body>
 </html>
 
-<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+<div id="eocv-player" data-project="65f0088408baa9fb41d56589" data-region="us-east-1"></div>
 
 
 
