--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>EngageOne&trade; Communicate Chat Web Client Example</title>
-        <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; font-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ wss://*.qa.engageonechat.com/ wss://*.qa.us-east-1.engageonechat.com/ wss://*.qa.eu-central-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
-    </head>
-    <body>
-        <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.qa.engageonechat.com/loader.min.js"></script>
-        <script>converseChatLoader({
-            host: "wss://chatws.qa.us-east-1.engageonechat.com",
-            converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
-            serverUserImage: "https://webclient.qa.engageonechat.com/eo-square-mark.png",
-            tenant: "sa340c2",
-            botId: "Kamil ID,Bot ID",
-            placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
-        });</script>
-    </body>
+
+<head>
+  <title>EngageOne&trade; Communicate Chat Web Client Example</title>
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; object-src 'self' blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; font-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ wss://*.qa.engageonechat.com/ wss://*.qa.us-east-1.engageonechat.com/ wss://*.qa.eu-central-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'" />
+</head>
+
+<body>
+  <div id="chatcontainer" class="chat-container"></div>
+  <script src="https://webclient.qa.engageonechat.com/loader.min.js"></script>
+  <script>converseChatLoader({
+      host: "wss://chatws.qa.us-east-1.engageonechat.com",
+      converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
+      serverUserImage: "https://webclient.qa.engageonechat.com/eo-square-mark.png",
+      tenant: "sa340c2",
+      botId: "Kamil ID,Bot ID",
+      placeholder: "Type a message...",
+      chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
+    });</script>
+</body>
+
 </html>
 
 
@@ -30,33 +34,37 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pizzeria_style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="pizzeria_style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap"
+    rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body>
   <div id="eocv-player" data-project="65f19fc0cdb6cd61db9b5bcf" data-region="us-east-1"></div>
-    <header id="header" class="clearfix">
-      <div id="logo">
+  <header id="header" class="clearfix">
+    <div id="logo">
       <img width="60" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
-      </div>
-      <nav class="menu">
-        <ul>
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div class="contact-info">
-        <div class="tel">700007700</div>
-      </div>
+    </div>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">Strona główna</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">O nas</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Kontakt</a></li>
+      </ul>
+    </nav>
+    <div class="contact-info">
+      <div class="tel">700007700</div>
+    </div>
 
-    </header>
+  </header>
 
   <main>
     <div class="slider-box clearfix">
@@ -131,7 +139,7 @@
 
 
 
-        <!--
+    <!--
             Menu pizze:
             https://cdn.pixabay.com/photo/2017/12/05/20/10/pizza-3000285_960_720.png 
                     Greek Pizza 22 zł 
@@ -150,11 +158,12 @@
       <li><a href=""></a>Blog</li>
       <li><a href=""></a>Kontakt</li>
     </ul>
-
+    <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   </footer>
-          
-        
- 
+
+
+
 </body>
+
+
 </html>
-<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
