--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
@@ -18,13 +18,14 @@
             chatBotBaseUrl: "https://webclient.converse.engageone.co"
         });</script>
     </body>
-</html>
+</html> -->
 
 
 <html lang="en">
 
 <head>
-  <!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script> -->
+  <!-- // video Script -->
+  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -35,7 +36,8 @@
 </head>
 
 <body>
-  <!-- <div id="eocv-player" data-project="65f19fc0cdb6cd61db9b5bcf" data-region="us-east-1" data-width="300" data-environment="dev3"></div> -->
+  <!-- // Video container -->
+  <div id="eocv-player" data-project="646b41cba33394215e04d648" data-region="eu-central-1"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="60" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
