--- a/pizzeria.html
+++ b/pizzeria.html
@@ -37,7 +37,7 @@
 
 <body>
   <!-- // Video container -->
-  <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1" data-environment='qa'></div>
+  <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1" data-environment="qa"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
