--- a/pizzeria.html
+++ b/pizzeria.html
@@ -38,9 +38,9 @@
 <body>
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
-<!--   
-  <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1" data-environment="qa"></div> -->
-  <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div>
+  
+  <div id="eocv-player" data-project="661facf4b585fd074e0ff14f" data-region="us-east-1" data-environment="qa"></div>
+  <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> -->
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
