--- a/pizzeria.html
+++ b/pizzeria.html
@@ -39,7 +39,7 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="635bb92cb29c00b992902104" data-region="eu-west-2"></div>
+  <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div>
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
   <header id="header" class="clearfix">
