--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<!-- <html>
+<!DOCTYPE html>
+<html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; font-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.gstatic.com/; connect-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://*.s3.amazonaws.com/ blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ wss://*.converse.engageone.co/ wss://*.us-east-1.converse.engageone.co/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/; font-src 'self' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ wss://*.dev2.engageonechat.com/ wss://*.dev2.us-east-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
     </head>
     <body>
         <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.converse.engageone.co/loader.min.js"></script>
+        <script src="https://webclient.dev2.engageonechat.com/loader.min.js"></script>
         <script>converseChatLoader({
-            host: "wss://chatws.us-east-1.converse.engageone.co",
-            converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
-            serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
-            tenant: "sa460f6",
-            botId: "Kamil ID,BOT JSON ID",
+            host: "wss://chatws.dev2.us-east-1.engageonechat.com",
+            converseHost: "https://chatrunner.dev2.us-east-1.engageonechat.com",
+            serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
+            tenant: "sa346cc",
+            botId: "Kamil J,Bot2",
             placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.converse.engageone.co"
+            chatBotBaseUrl: "https://webclient.dev2.engageonechat.com"
         });</script>
     </body>
-</html> -->
+</html>
+
 
 
 <html lang="en">
 
 <head>
   <!-- // video Script -->
-  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+  <!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -39,7 +41,7 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div>
+  <!-- <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
   <header id="header" class="clearfix">
