--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
+
+
 <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
@@ -12,14 +13,15 @@
         <script>converseChatLoader({
             host: "wss://chatws.dev2.us-east-1.engageonechat.com",
             converseHost: "https://chatrunner.dev2.us-east-1.engageonechat.com",
-            serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
+            serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
             tenant: "sa346cc",
-            botId: "Kamil J,Bot2",
+            botId: "Siema Kamil_R-e!4()!**,Siema Kamil_R-e!4()!** BOT",
             placeholder: "Type a message...",
             chatBotBaseUrl: "https://webclient.dev2.engageonechat.com"
         });</script>
     </body>
 </html>
+
 
 
 
