--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-
-
 <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/; font-src 'self' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.dev2.engageonechat.com/ https://*.dev2.us-east-1.engageonechat.com/ wss://*.dev2.engageonechat.com/ wss://*.dev2.us-east-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; font-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.gstatic.com/; connect-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://*.s3.amazonaws.com/ blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ wss://*.converse.engageone.co/ wss://*.us-east-1.converse.engageone.co/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
     </head>
     <body>
         <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.dev2.engageonechat.com/loader.min.js"></script>
+        <script src="https://webclient.converse.engageone.co/loader.min.js"></script>
         <script>converseChatLoader({
-            host: "wss://chatws.dev2.us-east-1.engageonechat.com",
-            converseHost: "https://chatrunner.dev2.us-east-1.engageonechat.com",
+            host: "wss://chatws.us-east-1.converse.engageone.co",
+            converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
             serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
-            tenant: "sa346cc",
-            botId: "Siema Kamil_R-e!4()!**,Siema Kamil_R-e!4()!** BOT",
+            tenant: "sa460f6",
+            botId: "Kamil J,bot od pawla",
             placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.dev2.engageonechat.com"
+            chatBotBaseUrl: "https://webclient.converse.engageone.co"
         });</script>
     </body>
 </html>
+
 
 
 
