jadzia na prodzie

--- a/pizzeria.html
+++ b/pizzeria.html
@@ -13,12 +13,13 @@
             converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
             serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
             tenant: "sa460f6",
-            botId: "Kamil J,bot od pawla",
+            botId: "Kamil J,Jadzia",
             placeholder: "Type a message...",
             chatBotBaseUrl: "https://webclient.converse.engageone.co"
         });</script>
     </body>
 </html>
+
 
 
 
