--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
@@ -18,7 +18,7 @@
             chatBotBaseUrl: "https://webclient.dev.engageonechat.com"
         });</script>
     </body>
-</html>
+</html> -->
 
 
 
@@ -26,7 +26,7 @@
 
 <head>
   <!-- // video Script -->
-  <!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script> -->
+  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -43,6 +43,7 @@
   <!-- <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
+  <div id="eocv-player" data-project="62a2f9f5905778afab4047b4" data-region="us-east-1" data-environment="dev"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
