--- a/pizzeria.html
+++ b/pizzeria.html
@@ -43,7 +43,7 @@
   <!-- <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
-  <div id="eocv-player" data-project="62a2f9f5905778afab4047b4" data-region="us-east-1" data-environment="qa"></div>
+  <div id="eocv-player" data-project="62a2f9f5905778afab4047b4" data-region="us-east-1" data-environment="dev2"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
