--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,34 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>EngageOne&trade; Communicate Chat Web Client Example</title>
-        <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; font-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.gstatic.com/; connect-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://*.s3.amazonaws.com/ blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ wss://*.converse.engageone.co/ wss://*.us-east-1.converse.engageone.co/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
-    </head>
-    <body>
-        <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.converse.engageone.co/loader.min.js"></script>
-        <script>converseChatLoader({
-            host: "wss://chatws.us-east-1.converse.engageone.co",
-            converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
-            serverUserImage: "https://webclient.converse.engageone.co/eo-square-mark.png",
-            tenant: "sa460f6",
-            botId: "Kamil J,bot od pawla",
-            placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.converse.engageone.co"
-        });</script>
-    </body>
-</html>
-
-
-
 
 <html lang="en">
 
 <head>
   <!-- // video Script -->
-  <!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script> -->
+  <script async defer src="https://embed.engageone.video/alpha/0.0.52/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -45,7 +21,7 @@
   <!-- <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
-  <!-- <div id="eocv-player" data-project="62a2f9f5905778afab4047b4" data-region="us-east-1" data-environment="dev2"></div> -->
+  <div id="eocv-player" data-project="62a190617138732cf0cef4ee" data-region="us-east-1"data-environment="dev2"></div>></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
