--- a/pizzeria.html
+++ b/pizzeria.html
@@ -21,7 +21,7 @@
   <!-- <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
-  <div id="eocv-player" data-project="668288ef5f967b3416c995d6" data-region="us-east-1"data-environment="dev"></div>></div>
+  <div id="eocv-player" data-project="668288ef5f967b3416c995d6" data-region="us-east-1"data-environment="dev2"></div>></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
