--- a/pizzeria.html
+++ b/pizzeria.html
@@ -4,7 +4,7 @@
 
 <head>
   <!-- // video Script -->
-  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+  <script async defer src="https://embed.engageone.video/alpha/0.0.52/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -18,7 +18,7 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="65fd62eb22152a0507e4dd80" data-region="us-east-1"></div>
+  <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div>
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>></div> -->
