--- a/pizzeria.html
+++ b/pizzeria.html
@@ -18,9 +18,9 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="us-east-1"></div>
+  <!-- <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
-  <!-- <div id="eocv-player" data-project="661f8820f49330cc98006646" data-region="eu-central-1" data-environment="qa"></div> --> 
+  <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="eu-central-1" data-environment="qa"></div> 
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>></div> -->
   <header id="header" class="clearfix">
     <div id="logo">
