--- a/pizzeria.html
+++ b/pizzeria.html
@@ -20,7 +20,7 @@
   
   <!-- <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
-  <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="eu-central-1" data-environment="qa"></div> 
+  <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="us-east-1" data-environment="qa"></div> 
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>></div> -->
   <header id="header" class="clearfix">
     <div id="logo">
