--- a/pizzeria.html
+++ b/pizzeria.html
@@ -4,7 +4,7 @@
 
 <head>
   <!-- // video Script -->
-  <script async defer src="https://embed.engageone.video/alpha/0.0.52/playerPlugin.js"></script>
+  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
