--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 
-<!-- <html lang="en"> -->
-
 <head>
   <!-- // video Script -->
   <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
@@ -18,10 +16,10 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div>
+  <!-- <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
-  <!-- <div id="eocv-player" data-project="6673d4180c21cd6b5e919d01" data-region="us-east-1" data-environment="qa"></div>  -->
-  <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>></div> -->
+  <div id="eocv-player" data-project="667bb7a89d0d67996230ab02" data-region="us-east-1" data-environment="qa"></div> 
+  <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
