--- a/pizzeria.html
+++ b/pizzeria.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div id="eocv-player" data-project="65f19fc0cdb6cd61db9b5bcf" data-region="us-east-1" data-width="300" data-environment="dev3"></div>
+  <div id="eocv-player" data-project="66f260e0a9d3a163d970de0a" data-region="us-east-1"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="60" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
