--- a/pizzeria.html
+++ b/pizzeria.html
@@ -18,7 +18,7 @@
   
   <!-- <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
-  <div id="eocv-player" data-project="670e0d6fd019fb6061e997a5" data-region="us-east-1" data-environment="qa"></div> 
+  <div id="eocv-player" data-project="6728c692dea9dd647f9e4499" data-region="us-east-1" data-environment="staging"></div> 
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
   <header id="header" class="clearfix">
     <div id="logo">
