--- a/pizzeria.html
+++ b/pizzeria.html
@@ -18,7 +18,7 @@
   
   <!-- <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
-  <div id="eocv-player" data-project="671b94431de2e2284194b327" data-region="us-east-1" data-environment="staging"></div> 
+  <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div> 
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
   <header id="header" class="clearfix">
     <div id="logo">
