--- a/pizzeria.html
+++ b/pizzeria.html
@@ -16,9 +16,9 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <!-- <div id="eocv-player" data-project="66013d936d4e89a70ea3936f" data-region="us-east-1"></div> -->
+  <div id="eocv-player" data-project="673f31c7a163807856bb6bd8" data-region="us-east-1"></div>
   <!-- // dodajemy w moecie testowania z QA -->
-  <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div> 
+  <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
   <header id="header" class="clearfix">
     <div id="logo">
