--- a/pizzeria.html
+++ b/pizzeria.html
@@ -12,13 +12,14 @@
             host: "wss://chatws.staging.us-east-1.engageonechat.com",
             converseHost: "https://chatrunner.staging.us-east-1.engageonechat.com",
             serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
-            tenant: "sacee8a",
-            botId: "Kamil J,Bot",
+            tenant: "sa3a19d",
+            botId: "Kamil J,Fajny Bot",
             placeholder: "Type a message...",
             chatBotBaseUrl: "https://webclient.staging.engageonechat.com"
         });</script>
     </body>
 </html>
+
 
 
 <head>
