--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
@@ -18,7 +18,7 @@
             chatBotBaseUrl: "https://webclient.staging.engageonechat.com"
         });</script>
     </body>
-</html>
+</html> -->
 
 
 
