--- a/pizzeria.html
+++ b/pizzeria.html
@@ -38,7 +38,7 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="67d009167982cbabb3a00a91" data-region="67d009167982cbabb3a00a91" data-environment="dev"></div>
+  <div id="eocv-player" data-project="67d009167982cbabb3a00a91" data-region="us-east-1" data-environment="dev"></div>
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
   <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
