--- a/pizzeria.html
+++ b/pizzeria.html
@@ -38,10 +38,10 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="673f31c7a163807856bb6bd8" data-region="us-east-1"></div>
+  <div id="eocv-player" data-project="67c5a9d460adffc8d7f3339e" data-region="eu-west-2"></div>
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
-  <!-- <div id="eocv-player" data-project="661e4c59489f78fac20d9505" data-region="us-east-1"data-environment="qa"></div>> -->
+  <!-- <div id="eocv-player" data-project="67c5a9d460adffc8d7f3339e" data-region="eu-west-2"data-environment="qa"></div>> -->
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
