--- a/pizzeria.html
+++ b/pizzeria.html
@@ -38,7 +38,7 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-  <div id="eocv-player" data-project="67c5a9d460adffc8d7f3339e" data-region="eu-west-2"></div>
+  <div id="eocv-player" data-project="673f31c7a163807856bb6bd8" data-region="us-east-1"></div>
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
   <!-- <div id="eocv-player" data-project="67c5a9d460adffc8d7f3339e" data-region="eu-west-2"data-environment="qa"></div>> -->
