--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<!-- <html>
+<!DOCTYPE html>
+<html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/; font-src 'self' https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.staging.engageonechat.com/ https://*.staging.us-east-1.engageonechat.com/ wss://*.staging.engageonechat.com/ wss://*.staging.us-east-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; font-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.gstatic.com/; connect-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://*.s3.amazonaws.com/ blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ wss://*.converse.engageone.co/ wss://*.us-east-1.converse.engageone.co/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
     </head>
     <body>
         <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.staging.engageonechat.com/loader.min.js"></script>
+        <script src="https://webclient.converse.engageone.co/loader.min.js"></script>
         <script>converseChatLoader({
-            host: "wss://chatws.staging.us-east-1.engageonechat.com",
-            converseHost: "https://chatrunner.staging.us-east-1.engageonechat.com",
+            host: "wss://chatws.us-east-1.converse.engageone.co",
+            converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
             serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
-            tenant: "sa3a19d",
-            botId: "Kamil J,Fajny Bot",
+            tenant: "sa460f6",
+            botId: "Kamil J,Reporting Bot",
             placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.staging.engageonechat.com"
+            chatBotBaseUrl: "https://webclient.converse.engageone.co"
         });</script>
     </body>
-</html> -->
-
-
+</html>
 
 <head>
   <!-- // video Script -->
-<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+<!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -32,7 +31,7 @@
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap"
     rel="stylesheet">
   <title>Document</title>
-</head>
+</head> -->
 
 <body>
   <!-- // Video container -->
