--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
@@ -21,9 +20,12 @@
     </body>
 </html>
 
+
+
+
 <head>
   <!-- // video Script -->
-<!-- <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pizzeria_style.css">
@@ -31,7 +33,7 @@
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap"
     rel="stylesheet">
   <title>Document</title>
-</head> -->
+</head>
 
 <body>
   <!-- // Video container -->
