--- a/pizzeria.html
+++ b/pizzeria.html
@@ -3,19 +3,19 @@
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-inline' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/; font-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://fonts.gstatic.com/; connect-src 'self' https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ https://*.s3.amazonaws.com/ blob: https://*.converse.engageone.co/ https://*.us-east-1.converse.engageone.co/ wss://*.converse.engageone.co/ wss://*.us-east-1.converse.engageone.co/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; font-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ wss://*.qa.engageonechat.com/ wss://*.qa.us-east-1.engageonechat.com/ wss://*.qa.eu-central-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
     </head>
     <body>
         <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.converse.engageone.co/loader.min.js"></script>
+        <script src="https://webclient.qa.engageonechat.com/loader.min.js"></script>
         <script>converseChatLoader({
-            host: "wss://chatws.us-east-1.converse.engageone.co",
-            converseHost: "https://chatrunner.us-east-1.converse.engageone.co",
+            host: "wss://chatws.qa.us-east-1.engageonechat.com",
+            converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
             serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
-            tenant: "sa460f6",
-            botId: "Kamil J,Reporting Bot",
+            tenant: "sa340c2",
+            botId: "Kamil J,Rafalowy",
             placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.converse.engageone.co"
+            chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
         });</script>
     </body>
 </html>
@@ -23,7 +23,8 @@
 
 
 
-<head>
+
+<!-- <head>
   <!-- // video Script -->
 <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
@@ -33,7 +34,7 @@
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap"
     rel="stylesheet">
   <title>Document</title>
-</head>
+</head> -->
 
 <body>
   <!-- // Video container -->
