--- a/pizzeria.html
+++ b/pizzeria.html
@@ -13,12 +13,11 @@
             converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
             serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
             tenant: "sa340c2",
-            botId: "Kamil J,Reporting Pawlowy Bot",
+            botId: "Kamil J,Rafalowy 2",
             placeholder: "Type a message...",
             chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
         });</script>
     </body>
-    
 </html>
 
 
