--- a/pizzeria.html
+++ b/pizzeria.html
@@ -61,7 +61,7 @@
     <div class="contact-info">
       <div class="tel">700007700</div>
     </div>
-
+<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   </header>
 
   <main>
